backup/metadata/objects/Assessment__c/fields/Accommodation_Recommendations__c.field-meta.xml
<CustomField>
    <fullName>Accommodation_Recommendations__c</fullName>
    <inlineHelpText>Accommodation recommendations</inlineHelpText>
    <label>Accommodation Recommendations</label>
    <type>TextArea</type>
</CustomField>