backup/metadata/objects/Assessment__c/fields/Assessment_Type__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Type__c</fullName>
    <inlineHelpText>Type of assessment</inlineHelpText>
    <label>Assessment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-Admission</fullName>
            </value>
            <value>
                <fullName>Initial</fullName>
            </value>
            <value>
                <fullName>Review</fullName>
            </value>
            <value>
                <fullName>Post-Fall</fullName>
            </value>
            <value>
                <fullName>Change in Condition</fullName>
            </value>
            <value>
                <fullName>Annual Review</fullName>
            </value>
            <value>
                <fullName>Discharge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>