backup/metadata/objects/Assessment__c/fields/Assessor__c.field-meta.xml
<CustomField>
    <fullName>Assessor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Person conducting the assessment</description>
    <label>Assessor</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Assessments</relationshipLabel>
    <relationshipName>Assessments</relationshipName>
    <type>Lookup</type>
</CustomField>