backup/metadata/objects/Assessment__c/fields/Cognitive_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Cognitive_Assessment__c</fullName>
    <inlineHelpText>Cognitive assessment findings</inlineHelpText>
    <label>Cognitive Assessment</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>