backup/metadata/objects/Assessment__c/fields/Follow_Up_Notes__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Notes__c</fullName>
    <inlineHelpText>Notes about required follow up</inlineHelpText>
    <label>Follow Up Notes</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>