backup/metadata/objects/Assessment__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <inlineHelpText>Where assessment took place</inlineHelpText>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Care Home</fullName>
            </value>
            <value>
                <fullName>Resident&apos;s Home</fullName>
            </value>
            <value>
                <fullName>Hospital</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>