backup/metadata/objects/Assessment__c/fields/Medical_Needs_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Medical_Needs_Assessment__c</fullName>
    <inlineHelpText>Medical needs assessment findings</inlineHelpText>
    <label>Medical Needs Assessment</label>
    <type>TextArea</type>
</CustomField>