backup/metadata/objects/Assessment__c/fields/Mental_Health_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Mental_Health_Assessment__c</fullName>
    <inlineHelpText>Mental health assessment findings</inlineHelpText>
    <label>Mental Health Assessment</label>
    <type>TextArea</type>
</CustomField>