backup/metadata/objects/Assessment__c/fields/Mobility_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Mobility_Assessment__c</fullName>
    <inlineHelpText>Mobility assessment findings</inlineHelpText>
    <label>Mobility Assessment</label>
    <type>TextArea</type>
</CustomField>