backup/metadata/objects/Assessment__c/fields/Nutrition_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Nutrition_Assessment__c</fullName>
    <inlineHelpText>Nutrition assessment findings</inlineHelpText>
    <label>Nutrition Assessment</label>
    <type>TextArea</type>
</CustomField>