backup/metadata/objects/Assessment__c/fields/Personal_Care_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Personal_Care_Assessment__c</fullName>
    <inlineHelpText>Personal care assessment findings</inlineHelpText>
    <label>Personal Care Assessment</label>
    <type>TextArea</type>
</CustomField>