backup/metadata/objects/Assessment__c/fields/Pressure_Sore_Risk__c.field-meta.xml
<CustomField>
    <fullName>Pressure_Sore_Risk__c</fullName>
    <inlineHelpText>Risk of pressure sores</inlineHelpText>
    <label>Pressure Sore Risk</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Very High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>