backup/metadata/objects/Assessment__c/fields/Resident__c.field-meta.xml
<CustomField>
    <fullName>Resident__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Person being assessed</description>
    <label>Resident</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Assessments</relationshipLabel>
    <relationshipName>Assessments</relationshipName>
    <type>Lookup</type>
</CustomField>