backup/metadata/objects/Assessment__c/fields/Social_Needs_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Social_Needs_Assessment__c</fullName>
    <inlineHelpText>Social needs assessment findings</inlineHelpText>
    <label>Social Needs Assessment</label>
    <type>TextArea</type>
</CustomField>